# corn-and-culture-club

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  STATUS.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/ccc-preview/: SKILL.md
.claude/skills/ccc-research/: SKILL.md
.claude/skills/ccc-research/references/: facebook.md  instagram.md
.claude/skills/ccc-writer/: SKILL.md
data/: evergreen.yaml  sources.yaml
data/editions/2026-07-09/: candidates.json  draft.md  edition.html  research.json  research.md
data/editions/2026-07-14/: candidates.json  draft.md  edition.html  research.md
scripts/: README.md  build_edition.py  ccc_core.py  fetch_facebook.py  fetch_html.py  fetch_ics.py  fetch_instagram.py  fetch_weather.py  render_preview.py
style/: .thumbnail  Brand &amp; Style Guide.dc.html  Logo &amp; Favicon Options.dc.html  design-system.md  github.md  style-guide-for-repo.md  voice.md
style/uploads/: edition (4).html
