[project]
name = "corn-and-culture-club"
version = "0.1.0"
description = "A weekly curated newsletter about the good stuff to do in greater Iowa City"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32", # HTTP for calendars, APIs, weather
    "icalendar>=6.0", # parse ICS feeds (libraries, parks & rec)
    "beautifulsoup4>=4.12", # HTML scraping fallback
    "pyyaml>=6.0", # sources.yaml / evergreen.yaml
    "python-dateutil>=2.9", # fuzzy date parsing + tz handling
    "rapidfuzz>=3.9", # fuzzy dedupe of overlapping events
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
